--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,43 +320,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If price is 0.50, predicted sellout is 1744.73, predicted revenue is 872.36\n",
-      "If price is 0.83, predicted sellout is 1744.70, predicted revenue is 1443.89\n",
-      "If price is 1.16, predicted sellout is 1744.68, predicted revenue is 2015.40\n",
-      "If price is 1.48, predicted sellout is 1744.65, predicted revenue is 2586.90\n",
-      "If price is 1.81, predicted sellout is 1744.63, predicted revenue is 3158.38\n",
-      "If price is 2.14, predicted sellout is 1744.61, predicted revenue is 3729.85\n",
-      "If price is 2.47, predicted sellout is 1744.58, predicted revenue is 4301.30\n",
-      "If price is 2.79, predicted sellout is 1744.56, predicted revenue is 4872.74\n",
-      "If price is 3.12, predicted sellout is 1744.54, predicted revenue is 5444.16\n",
-      "If price is 3.45, predicted sellout is 1744.51, predicted revenue is 6015.56\n",
-      "If price is 3.78, predicted sellout is 1744.49, predicted revenue is 6586.95\n",
-      "If price is 4.10, predicted sellout is 1744.46, predicted revenue is 7158.32\n",
-      "If price is 4.43, predicted sellout is 1744.44, predicted revenue is 7729.68\n",
-      "If price is 4.76, predicted sellout is 1744.42, predicted revenue is 8301.02\n",
-      "If price is 5.09, predicted sellout is 1744.39, predicted revenue is 8872.35\n",
-      "If price is 5.41, predicted sellout is 1744.37, predicted revenue is 9443.66\n",
-      "If price is 5.74, predicted sellout is 1744.35, predicted revenue is 10014.95\n",
-      "If price is 6.07, predicted sellout is 1744.32, predicted revenue is 10586.23\n",
-      "If price is 6.40, predicted sellout is 1744.30, predicted revenue is 11157.50\n",
-      "If price is 6.72, predicted sellout is 1744.28, predicted revenue is 11728.75\n",
-      "If price is 7.05, predicted sellout is 1744.25, predicted revenue is 12299.98\n",
-      "If price is 7.38, predicted sellout is 1744.23, predicted revenue is 12871.20\n",
-      "If price is 7.71, predicted sellout is 1744.20, predicted revenue is 13442.40\n",
-      "If price is 8.03, predicted sellout is 1744.18, predicted revenue is 14013.59\n",
-      "If price is 8.36, predicted sellout is 1744.16, predicted revenue is 14584.76\n",
-      "If price is 8.69, predicted sellout is 1744.13, predicted revenue is 15155.92\n",
-      "If price is 9.02, predicted sellout is 1744.11, predicted revenue is 15727.06\n",
-      "If price is 9.34, predicted sellout is 1744.09, predicted revenue is 16298.18\n",
-      "If price is 9.67, predicted sellout is 1744.06, predicted revenue is 16869.29\n",
-      "If price is 10.00, predicted sellout is 1744.04, predicted revenue is 17440.39\n"
+      "If price is 0.50, predicted sellout is 1791.07, predicted revenue is 895.53\n",
+      "If price is 0.83, predicted sellout is 1791.05, predicted revenue is 1482.24\n",
+      "If price is 1.16, predicted sellout is 1791.02, predicted revenue is 2068.94\n",
+      "If price is 1.48, predicted sellout is 1791.00, predicted revenue is 2655.62\n",
+      "If price is 1.81, predicted sellout is 1790.97, predicted revenue is 3242.28\n",
+      "If price is 2.14, predicted sellout is 1790.95, predicted revenue is 3828.93\n",
+      "If price is 2.47, predicted sellout is 1790.93, predicted revenue is 4415.56\n",
+      "If price is 2.79, predicted sellout is 1790.90, predicted revenue is 5002.18\n",
+      "If price is 3.12, predicted sellout is 1790.88, predicted revenue is 5588.78\n",
+      "If price is 3.45, predicted sellout is 1790.86, predicted revenue is 6175.37\n",
+      "If price is 3.78, predicted sellout is 1790.83, predicted revenue is 6761.94\n",
+      "If price is 4.10, predicted sellout is 1790.81, predicted revenue is 7348.49\n",
+      "If price is 4.43, predicted sellout is 1790.79, predicted revenue is 7935.03\n",
+      "If price is 4.76, predicted sellout is 1790.76, predicted revenue is 8521.55\n",
+      "If price is 5.09, predicted sellout is 1790.74, predicted revenue is 9108.06\n",
+      "If price is 5.41, predicted sellout is 1790.71, predicted revenue is 9694.56\n",
+      "If price is 5.74, predicted sellout is 1790.69, predicted revenue is 10281.03\n",
+      "If price is 6.07, predicted sellout is 1790.67, predicted revenue is 10867.49\n",
+      "If price is 6.40, predicted sellout is 1790.64, predicted revenue is 11453.94\n",
+      "If price is 6.72, predicted sellout is 1790.62, predicted revenue is 12040.37\n",
+      "If price is 7.05, predicted sellout is 1790.60, predicted revenue is 12626.79\n",
+      "If price is 7.38, predicted sellout is 1790.57, predicted revenue is 13213.19\n",
+      "If price is 7.71, predicted sellout is 1790.55, predicted revenue is 13799.57\n",
+      "If price is 8.03, predicted sellout is 1790.52, predicted revenue is 14385.94\n",
+      "If price is 8.36, predicted sellout is 1790.50, predicted revenue is 14972.29\n",
+      "If price is 8.69, predicted sellout is 1790.48, predicted revenue is 15558.63\n",
+      "If price is 9.02, predicted sellout is 1790.45, predicted revenue is 16144.95\n",
+      "If price is 9.34, predicted sellout is 1790.43, predicted revenue is 16731.26\n",
+      "If price is 9.67, predicted sellout is 1790.41, predicted revenue is 17317.55\n",
+      "If price is 10.00, predicted sellout is 1790.38, predicted revenue is 17903.82\n"
      ]
     }
    ],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +406,7 @@
       "coef of volume_per_joghurt_g: -0.07\n",
       "coef of packsize: -29.07\n",
       "coef of price: -106.94\n",
+      "coef of order: -9.27\n",
       "coef of brand_Activia: -101.92\n",
       "coef of brand_Alnatura: 120.29\n",
       "coef of brand_Danone: -7.13\n",
@@ -418,12 +419,12 @@
       "coef of flavour_raspberry: -50.77\n",
       "coef of flavour_straciatella: 307.20\n",
       "coef of flavour_strawberry: -29.13\n",
-      "coef of weekday_Monday: 43.30\n",
-      "coef of weekday_Saturday: 131.23\n",
-      "coef of weekday_Sunday: 3.56\n",
-      "coef of weekday_Thursday: 27.73\n",
-      "coef of weekday_Tuesday: 46.95\n",
-      "coef of weekday_Wednesday: 65.12\n"
+      "coef of weekday_Monday: 6.23\n",
+      "coef of weekday_Saturday: 140.50\n",
+      "coef of weekday_Sunday: 22.09\n",
+      "coef of weekday_Thursday: 18.46\n",
+      "coef of weekday_Tuesday: 19.14\n",
+      "coef of weekday_Wednesday: 46.58\n"
      ]
     }
    ],
